force-app/main/default/objects/Carrier_Info__c/Carrier_Info__c.object-meta.xml
<CustomObject>
    <description>Master object that sores all the Carrier information from HI. This object is a combination of both HI Carrier and HI Carrier Detail.</description>
    <label>Carrier Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Carrier Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carrier Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>