force-app/main/default/objects/Carrier_Info__c/fields/Address_Addressed_To__c.field-meta.xml
<CustomField>
    <fullName>Address_Addressed_To__c</fullName>
    <label>Address Addressed To</label>
    <type>TextArea</type>
</CustomField>