force-app/main/default/objects/Carrier_Info__c/fields/Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip__c</fullName>
    <label>Address Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>