force-app/main/default/objects/Carrier_Info__c/fields/Customer_Support__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support__c</fullName>
    <label>Customer Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>