force-app/main/default/objects/Carrier_Info__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>