force-app/main/default/objects/Carrier_Info__c/fields/Lidi_Census_Email__c.field-meta.xml
<CustomField>
    <fullName>Lidi_Census_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lidi Census Email</label>
    <type>Email</type>
</CustomField>