force-app/main/default/objects/Carrier_Info__c/fields/Sell_Description__c.field-meta.xml
<CustomField>
    <fullName>Sell_Description__c</fullName>
    <label>Sell Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>